speaker-info now aligned correctly again

--- a/src/assets/css/dukecon.less
+++ b/src/assets/css/dukecon.less
@@ -631,6 +631,7 @@ a .speakerinfo {
     min-width: 80px;
     width:90%;
     padding: 12px;
+    display: block;
     background:transparent;
     white-space: normal;
 }
